@@ -96,14 +96,10 @@ A Journal contains the following fields:
 - Active: A checkbox that allow to disable the tax.
 - View: Defines how the moves lines on this journal should be
   displayed.
-- Centralised counterpart: If checked all created lines are linked to
-  the last open movement for the current journal and the current
-  period.
 - Update Posted: if true it allow to upate posted moves of this
   journal.
 - Default Credit Account, Default Debit Account: Used as default
-  accounts on move lines for centralised journals and for journal of
-  *Cash* type.
+  accounts on move lines for journals of *Cash* type.
 - Type: By default take one of the following values: *General*,
   *Revenue*, *Expense*, *Cash*, *Situation*.
 
